flexbox header part1

--- a/flexbox.html
+++ b/flexbox.html
@@ -12,10 +12,81 @@
             flex-direction: row;
             margin-bottom: 20px;
         }
+
+        .header {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            height: 70px;
+            border:solid;
+            border-width: 1px;
+            display: flex;
+            flex-direction: row;
+            justify-content: start;
+        }
+
+        .header1 {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            height: 70px;
+            border:solid;
+            border-width: 1px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .header2 {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            height: 70px;
+            border:solid;
+            border-width: 1px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
     </style>
     <title>Flexbox Practise</title>
 </head>
 <body>
+
+    <div class="header">
+
+        <div style="background-color:grey; width:100px">100px</div>
+
+
+        <div style="background-color:orangered; width:100px">100px</div>
+
+
+        <div style="background-color:yellow;  width:100px">100px</div>
+
+    </div>
+
+    <div class="header1">
+
+        <div style="background-color:grey; width:100px">100px</div>
+
+
+        <div style="background-color:orangered; width:100px">100px</div>
+
+
+        <div style="background-color:yellow;  width:100px">100px</div>
+
+    </div>
+
+    <div class="header2">
+
+        <div style="background-color:grey; width:100px">100px</div>
+
+
+        <div style="background-color:orangered; width:100px">100px</div>
+
+
+        <div style="background-color:yellow;  width:100px">100px</div>
+
+    </div>
+
     <div class="container">
         <div style="background-color:grey">div 1</div>
         <div style="background-color:pink">div 2</div>
