--- a/youtube.html
+++ b/youtube.html
@@ -3,12 +3,22 @@
     <head>
         <title>Youtube</title>
         <link rel="stylesheet" href="yt.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <input class="search-bar" type="text" placeholder="Search">
+        <div class="header">
+            <div class="left-section">left</div>
+            <div class="middle-section">
+                <input class="search-bar" type="text" placeholder="Search">
+
+            </div>
+            <div class="right-section">ryt</div>
+
+        </div>
 
         <div class="video-grid">
             <div class="video-preview">
