--- a/youtube.html
+++ b/youtube.html
@@ -11,12 +11,29 @@
     </head>
     <body>
         <div class="header">
-            <div class="left-section">left</div>
+            <div class="left-section">
+                <img class="hamburger-logo" src="icons/hamburger-menu.svg">
+                <img class="ytube-logo" src="icons/youtube-logo.svg">
+            </div>
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="Search">
-
+                <button class="search-btn">
+                    <img class="search-icon" src="icons/search.svg">
+                </button>
+                <button  class="voice-search-btn">
+                    <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+                </button>
             </div>
-            <div class="right-section">ryt</div>
+            <div class="right-section">
+                <img class="upload-icon" src="icons/upload.svg">
+
+                <img class="ytube-icon" src="icons/youtube-apps.svg">
+
+                <img class="noti-icon" src="icons/notifications.svg">
+
+
+                <img class="pro-icon" src="icons/my-channel.jpeg">
+            </div>
 
         </div>
 
